Add styling and functionality to AQI forecasting dashboard

--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -2372,6 +2372,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "folder_path = r'D:\\aqi_forecast_arima\\AQI_forecast_arima\\results'\n",
+    "aqi_data.to_csv(f\"{folder_path}/aqi_data.csv\", index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
    "outputs": [
